[gd_scene load_steps=7 format=3 uid="uid://c36bfklt41qup"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_33j2b"]
[ext_resource type="PackedScene" uid="uid://d1do5kf6rfexg" path="res://Scenes/bullet.tscn" id="2_mtye5"]
[ext_resource type="Texture2D" uid="uid://chraoarew6f83" path="res://Assets/Walk_1.png" id="2_s58jv"]
[ext_resource type="Texture2D" uid="uid://bmjrkotu0hiby" path="res://Assets/Walk_2.png" id="3_e23dn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3iyag"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_s58jv")
}, {
"duration": 1.0,
"texture": ExtResource("3_e23dn")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xsgii"]
size = Vector2(22, 46)

[node name="Player" type="Area2D"]
script = ExtResource("1_33j2b")
bullet_scene = ExtResource("2_mtye5")

[node name="Skin" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_3iyag")
animation = &"walk"
frame_progress = 0.493377

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_xsgii")

[node name="ShootPosition" type="Marker2D" parent="."]
position = Vector2(0, -21)

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.4

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
